ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iti-pro-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: iti-pro.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iti-pro
            port:
              number: 8080
